add /visit POST route to user api (#5)
* add /visit GET and POST routes to user api

* add genuxMiddleware inside authenticationMiddlleware.js

* remove the get endpoint

* moved genux token to header in request

* applied oli's suggestions

* applied nacho's suggestion
