# src/static/swagger.json
@@ -196,6 +196,58 @@
           }
         }
       }
+    },
+    "/visits": {
+      "post": {
+        "tags": [
+          "visits"
+        ],
+        "summary": "Register new visit",
+        "operationId": "addVisit",
+        "requestBody": {
+          "description": "Created visit object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/VisitNew"
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Visit registered successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "1"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Missing fields / Invalid visibility"
+          },
+          "404": {
+            "description": "Space linked to the scan code not found"
+          },
+          "409": {
+            "description": "Establishment already registered"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -267,7 +319,7 @@
                 },
                 "openPlace": {
                   "type":"boolean"
-              }   
+              }
             }
           }
         }
@@ -336,7 +388,7 @@
                 },
                 "openPlace": {
                   "type":"boolean"
-                }   
+                }
               }
             }
           }
@@ -376,6 +428,28 @@
           "country": {
             "type": "string",
             "example": "Argentina"
+          }
+        }
+      },
+      "VisitNew": {
+        "type": "object",
+        "required": [
+          "scanCode",
+          "userGeneratedCode",
+          "timestamp"
+        ],
+        "properties": {
+          "scanCode": {
+            "type": "string",
+            "example": "MNPQWOEUPO452345"
+          },
+          "userGeneratedCode": {
+            "type": "string",
+            "example": "1PWIOEJPOVUP12OI34J"
+          },
+          "timestamp": {
+            "type": "datetime",
+            "example": "1970-01-01 00:00:01"
           }
         }
       }
